--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -26,3 +26,20 @@ template:
    containers:
    - name: mysql
      image: joindevops/mysql:v1.0
+
+---
+
+apiversion: v1
+kind: service
+metadata: 
+ name: nginx
+spec: 
+ selector:
+      name: front-end
+      project: expense
+      component: frontend
+      environment: dev
+ports:
+    - protocol: TCP
+      port: 3306  #service-port
+      targetport: 3306 #target-port
