--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -36,6 +36,14 @@ template:
    containers:
    - name: backend
      image: joindevops/mysql:v1.0
+     resources:
+       requests:
+         cpu: "100m"
+         memory: "128Mi"
+       limits:
+        cpu: "150m"
+        memory: "256Mi"
+
      envFrom:
       configMapKeyRef:
        name: backend
